Update for 1.20.6 support (on NeoForge since Architectury currently does not have Forge 1.20.6 support)

--- a/settings.gradle
+++ b/settings.gradle
@@ -24,4 +24,6 @@ plugins {
 }
 
 rootProject.name = 'MoreIce'
-include('common', 'forge', 'neoforge')
+// NOTE: Architectury 1.20.5+ currently does not have Forge support
+//include('common', 'neoforge')
+include('common', 'neoforge')
