--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -100,6 +100,26 @@ components.java {
     }
 }
 
+// This block of code expands all declared replace properties in the specified resource targets.
+// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
+// When "copyIdeResources" is enabled, this will also run before the game launches in IDE environments.
+// See https://docs.gradle.org/current/dsl/org.gradle.language.jvm.tasks.ProcessResources.html
+processResources {
+    // expand every property from gradle.properties
+    def stringProperties = providers.gradlePropertiesPrefixedBy('').get()
+    stringProperties.each { inputs.property(it.key, it.value) }
+
+    def files = ["META-INF/neoforge.mods.toml", "pack.mcmeta"]
+
+    files.each {
+        filesMatching(it) {
+            expand(stringProperties) {
+                escapeBackslash = true
+            }
+        }
+    }
+}
+
 // Example configuration to allow publishing using the maven-publish plugin
 publishing {
     publications {
