--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ java_version=21
 
 
 ## ModLoader Properties
-enabled_platforms=forge,neoforge
+enabled_platforms=forge,neoforge,fabric
 architectury_version=12.1.3
 
 
@@ -45,6 +45,14 @@ neo_version=20.6.112-beta
 neo_version_range=[20.6,)
 # The loader version range can only use the major version of FML as bounds
 neoforge_loader_version_range=[2,)
+# NOTE: May not need as Neoforge moved to official mappings
+yarn_mappings_patch_neoforge_version = 1.20.5+build.3
+
+
+## Fabric Properties
+yarn_mappings=1.20.6+build.1
+fabric_loader_version=0.15.11
+fabric_api_version=0.100.2+1.20.6
 
 
 ## Mod Properties
